--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
+title: Xylophone
+subtitle: Personal Blog
+description: Hi there, welcome!
+url: https://xyzdeclan.github.io
 avatar: /avatar.jpeg
+avatarTitle: Declan X
+avatarDesc: Master of Data Science Student @UniMelb
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
@@ -28,15 +31,18 @@ exclude:
   - not-pure-poole.gemspec
 
 # Optimize Jekyl SEO Tag
-twitter:
-  username: vszhub
-  card: summary
+# twitter:
+#   username: vszhub
+#   card: summary
 logo: logo.png
 social:
-  name: Songzi Vong
+  name: Yizong Xing
   links:
-    - https://twitter.com/vszhub
-    - https://github.com/vszhub
+    # - https://twitter.com/vszhub
+    - https://github.com/xyzdeclan
+  mail: 
+    - xyzdeclan@gmail.com
+    - yizongx@student.unimelb.edu.au
 google_site_verification: xxxxx
 lang: en
 
@@ -54,6 +60,8 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
+  name: Yizong Xing
+  url: https://github.com/xyzdeclan/
   email: vszhub@gmail.com
+
+
